add created username

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -5,7 +5,8 @@
 <%= @question.accrual_date %></p>
 <p>うんちく:
 <%= @question.memo %></p>
-<p>作成者: 不明</p>
+<p>作成者: 
+<%= @question.user.name %></p>
 
-<%= link_to 'Edit', edit_question_path(@question), class: 'btn btn-primary' %> |
+<%= link_to 'Edit', edit_question_path(@question), class: 'btn btn-primary' %>
 <%= link_to 'Back', questions_path, class: 'btn btn-primary' %>
