--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,11 +1,16 @@
 <h1>Genres index</h1>
-
-<% @genres.each do |genre| %>
-  <div>
-    <%= genre.name %>
-    <%= link_to 'Edit', edit_genre_path(genre), class: 'btn btn-outline-info btn-sm'  %>
-    <%= link_to 'Destroy', genre, method: :delete, class: 'btn btn-outline-danger btn-sm'  %>
-  </div>
-<% end %>
+  <table>
+    <tbody>
+    <% @genres.each do |genre| %>
+      <tr>
+        <th><%= genre.name %></th>
+        <th><%= link_to 'Edit', edit_genre_path(genre), class: 'btn btn-outline-info btn-sm'  %></th>
+        <th><%= link_to 'Destroy', genre, method: :delete, class: 'btn btn-outline-danger btn-sm'  %></th>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
 <br>
-<%= link_to 'New genre', new_genre_path, class: 'btn btn-primary' %>
+<%= link_to 'New genre', new_genre_path, class: 'btn btn-primary' %><br><br>
+<%= link_to 'Main Page', homes_top_path, class: 'btn btn-primary'  %><br><br>
+<%= link_to 'Question Index', questions_path, class: 'btn btn-primary' %>
