年月のデータ形式を変更

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,9 +1,20 @@
 <%= form_with model: @question do |f| %>
-  <%= f.label :name %>
+  <%= f.label :name %><br>
   <%= f.text_field :name %><br><br>
-  <%= f.label :accrual_date %><br>
-  <%= f.date_select :accrual_date, { }, class: 'form-control'%><br><br>
-  <%= f.label :memo %>
+  <a><%= f.label :year %><br>
+  <button class="btn btn-danger">A.D.</button>
+  <%= f.text_field :year %></a><br><br>
+  <%= f.label :month %>
+  <%= f.select :month, [["1月",1],["2月",2],["3月",3],["4月",4],["5月",5],["6月",6],["7月",7],
+  ["8月",8],["9月",9],["10月",10],["11月",11],["12月",12]] %><br>
+
+
+  <h4>Genre</h4>
+  <%  @genres.each do |genre| %> 
+    <%= "* " + genre.name %>
+  <% end %>
+  <br><br>
+  <%= f.label :memo %><br>
   <%= f.text_area :memo %><br><br>
   <%= f.submit %>
 <% end %>
