--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,7 +2,7 @@
 <p>できごと:
 <%= @question.name %></p>
 <p>起こった年月:
-<%= @question.accrual_date %></p>
+<%= @question.year %> 年　<%= @question.month %>月</p>
 <p>うんちく:
 <%= @question.memo %></p>
 <p>作成者: 
