--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,10 +1,17 @@
 <h1>Questions index</h1>
   <table>
+    <thead>
+      <tr>
+        <th>Question</th>
+        <th>Year/Month</th>
+        <th colspan="3"></th>
+      </tr>
+  </thead>
     <tbody>
       <% @questions.each do |question| %>
         <tr>
           <th><%= question.name %></th>
-          <th><%= question.accrual_date %></th>
+          <th><p><%= question.year %>年<%= question.month %> 月</th>
           <th><%= link_to 'show', question_path(question), class: 'btn btn-outline-primary btn-sm' %></th>
           <th><%= link_to 'Edit', edit_question_path(question), class: 'btn btn-outline-info btn-sm'  %></th>
           <th><%= link_to 'Destroy', question, method: :delete, class: 'btn btn-outline-danger btn-sm'  %></th>
