playerモデルの分離とcrud作成

--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Players#edit</h1>
-<p>Find me in app/views/players/edit.html.erb</p>
+<h1>Edit Question</h1>
+
+<%= render 'form' %>
+<%= link_to 'Back', players_url, class: 'btn btn-primary' %>
