--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -20,6 +20,6 @@
     </tbody>
   </table>
 <br>
-<%= link_to 'New question', new_question_path, class: 'btn btn-primary' %><br><br>
-<%= link_to 'Main Page', homes_top_path, class: 'btn btn-primary'  %><br><br>
+<%= link_to 'New question', new_question_path, class: 'btn btn-primary' %>
+<%= link_to 'Main Page', homes_top_path, class: 'btn btn-primary'  %>
 <%= link_to 'Genre Index', genres_path, class: 'btn btn-primary' %>
