--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Players#index</h1>
-<p>Find me in app/views/players/index.html.erb</p>
+<h1>Players index</h1>
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Played Games</th>
+        <th>Total Corrects</th>
+        <th colspan="3"></th>
+      </tr>
+  </thead>
+    <tbody>
+      <% @players.each do |player| %>
+        <tr>
+          <th><%= player.user.name %></th>
+          <th><%= player.game %></th>
+          <th><%= player.game %></th>
+          <th><%= link_to 'show', player_path(player), class: 'btn btn-outline-primary btn-sm' %></th>
+          <th><%= link_to 'Edit', edit_player_path(player), class: 'btn btn-outline-info btn-sm'  %></th>
+          <th><%= link_to 'Destroy', player, method: :delete, class: 'btn btn-outline-danger btn-sm'  %></th>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<br>
+<%= link_to 'Main Page', homes_top_path, class: 'btn btn-primary'  %>
+<%= link_to 'Genre Index', genres_path, class: 'btn btn-primary' %>
