--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Players#new</h1>
-<p>Find me in app/views/players/new.html.erb</p>
+<h1>New Player</h1>
+
+<%= render 'form' %>
+<%= link_to 'Back', players_path, class: 'btn btn-primary' %>
