--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,4 +1,4 @@
 <h1>Edit Question</h1>
 
 <%= render 'form' %>
-<%= link_to 'Back', questions_url, class: 'btn btn-primary' %>
+<%= link_to 'Back', players_url, class: 'btn btn-primary' %>
