game画面作成開始、出題の取得

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -12,6 +12,6 @@
   </table>
   <%= paginate @genres %>
 <br>
-<%= link_to 'New genre', new_genre_path, class: 'btn btn-primary' %><br><br>
-<%= link_to 'Player Index', players_path, class: 'btn btn-primary'  %><br><br>
-<%= link_to 'Question Index', questions_path, class: 'btn btn-primary' %>
+<%= link_to 'New genre', new_genre_path, class: 'btn btn-primary' %>
+<%= link_to 'Player Index', players_path, class: 'btn btn-primary'  %>
+<%= link_to 'Try Quiz!', games_prepare_path, class: 'btn btn-success' %>
