--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -27,3 +27,4 @@
 <%= link_to 'Main Page', homes_top_path, class: 'btn btn-primary'  %>
 <%= link_to 'Question Index', questions_path, class: 'btn btn-primary' %>
 <%= link_to 'Genre Index', genres_path, class: 'btn btn-primary' %>
+<%= link_to 'Try Quiz!', games_prepare_path, class: 'btn btn-success' %>
