--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -17,6 +17,7 @@
     <%= @player.comment %></p><br>
     <%= link_to 'Edit', edit_player_path(@player), class: 'btn btn-primary' %>
     <%= link_to 'Back', players_path, class: 'btn btn-primary' %>
+    <%= link_to 'Try Quiz!', games_prepare_path, class: 'btn btn-success' %>
   </div>
 
   <div　class="col-7" >
