--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -27,3 +27,4 @@
 <%= link_to 'New question', new_question_path, class: 'btn btn-primary' %>
 <%= link_to 'Player Index', players_path, class: 'btn btn-primary'  %>
 <%= link_to 'Genre Index', genres_path, class: 'btn btn-primary' %>
+<%= link_to 'Try Quiz!', games_prepare_path, class: 'btn btn-success' %>
