--- a/app/views/games/result.html.erb
+++ b/app/views/games/result.html.erb
@@ -5,4 +5,17 @@
 <%= @question.name %>
 <hr>
 <p>Other Question </P>
+<p><%= @question1.name %>: 
+<%= @question1.year %> 年
+<%= @question1.month %> 月</P>
+<p><%= @question2.name %>: 
+<%= @question2.year %> 年
+<%= @question2.month %> 月</P>
+<p><%= @question3.name %>: 
+<%= @question3.year %> 年
+<%= @question3.month %> 月</P>
+<p><%= @question0.name %>: 
+<%= @question0.year %> 年
+<%= @question0.month %> 月</P>
 
+<% 
