--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,6 +5,7 @@
   <%= link_to "できごと一覧", questions_path, class: 'btn btn-primary'  %>
   <%= link_to "ジャンル一覧", genres_path, class: 'btn btn-primary'  %>
   <%= link_to 'プレイヤー登録', new_player_path, class: 'btn btn-warning' %><br><br>
+  <%= link_to 'クイズに挑戦', games_prepare_path, class: 'btn btn-success' %><br><br>
   <%= link_to "ログアウト", destroy_user_session_path, method: :delete ,class: 'btn btn-danger' %>
 <% else %>
   <%= link_to "新規登録", new_user_registration_path, class: 'btn btn-primary'  %>
