結果画面にポップアップ処理

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -3,7 +3,7 @@
   <%= f.text_field :name %><br><br>
   <a><%= f.label :year %><br>
   <button class="btn btn-danger">A.D.</button>
-  <%= f.number_field :year %></a><br><br>
+  <%= f.number_field :year %>　年</a><br><br>
   <%= f.label :month %>
   <%= f.select :month, [["1月",1],["2月",2],["3月",3],["4月",4],["5月",5],["6月",6],["7月",7],
   ["8月",8],["9月",9],["10月",10],["11月",11],["12月",12]] %><br>
