--- a/app/views/games/result.html.erb
+++ b/app/views/games/result.html.erb
@@ -1,21 +1,49 @@
 <h1>Games#result</h1>
-<p>Find me in app/views/games/result.html.erb</p>
-
-<p> your answer </P>
-<%= @question.name %>
+<h5> your answer: <%= @question.name %> </h5>
+<h5> your total played games:  <%= current_user.player.game %></h5>
 <hr>
 <p>Other Question </P>
-<p><%= @question1.name %>: 
-<%= @question1.year %> 年
-<%= @question1.month %> 月</P>
-<p><%= @question2.name %>: 
-<%= @question2.year %> 年
-<%= @question2.month %> 月</P>
-<p><%= @question3.name %>: 
-<%= @question3.year %> 年
-<%= @question3.month %> 月</P>
-<p><%= @question0.name %>: 
-<%= @question0.year %> 年
-<%= @question0.month %> 月</P>
-
-<% 
+<table class="table">
+  <tr>
+    <th><p><%= @question0.name %></th>
+    <th><%= @question0.year %> 年
+    <%= @question0.month %> 月</P></th>
+    <th><button type="button" class="btn btn-primary mb-8" data-toggle="modal" data-target="#memoModal">Open Memo</button></th>
+  </tr>
+    <tr>
+    <th><p><%= @question1.name %></th>
+    <th><%= @question1.year %> 年
+    <%= @question1.month %> 月</P></th>
+    <th><button type="button" class="btn btn-primary mb-8" data-toggle="modal" data-target="#memoModal">Open Memo</button></th>
+  </tr>
+    <tr>
+    <th><p><%= @question2.name %></th>
+    <th><%= @question2.year %> 年
+    <%= @question2.month %> 月</P></th>
+    <th><button type="button" class="btn btn-primary mb-8" data-toggle="modal" data-target="#memoModal">Open Memo</button></th>
+  </tr>
+    <tr>
+    <th><p><%= @question3.name %></th>
+    <th><%= @question3.year %> 年
+    <%= @question3.month %> 月</P></th>
+    <th><button type="button" class="btn btn-primary mb-8" data-toggle="modal" data-target="#memoModal">Open Memo</button></th>
+   </tr>
+</table>
+<div class="modal fade" id="memoModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4><div class="modal-title" id="myModalLabel"></div></h4>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<hr>
+<%= link_to 'Retry!', games_play_path(:select_genre => @question.genre_id), class: 'btn btn-success'  %>
+<%= link_to 'Select Genre', games_prepare_path, class: 'btn btn-success'  %>
+<%= link_to 'End Game', player_path(current_user.player.id), class: 'btn btn-warning'  %>
