--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -12,6 +12,8 @@
   </table>
   <%= paginate @genres %>
 <br>
-<%= link_to 'New genre', new_genre_path, class: 'btn btn-primary' %>
-<%= link_to 'Player Index', players_path, class: 'btn btn-primary'  %>
+<%= link_to 'Create Genre', new_genre_path, class: 'btn btn-primary' %>
+<%= link_to 'Players Index', players_path, class: 'btn btn-primary'  %>
+<%= link_to 'Questions Index', questions_path, class: 'btn btn-primary'  %>
+<%= link_to 'Massage Board', messages_path, class: 'btn btn-primary' %>
 <%= link_to 'Try Quiz!', games_prepare_path, class: 'btn btn-success' %>
