--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -4,8 +4,9 @@
       <li>
         <div class="comment-content" id ="this_comment_<%= comment.id %>"></div>
         <p><%= comment.content %></p>
-        <p><%= link_to "edit", edit_message_comment_path(message, comment), remote: true %></p>
-        <p><%= link_to "delete", message_comment_path(comment.message_id, comment.id), method: :delete, remote: true, data: { confirm: "ok?"} %></p>
+        <%= link_to "edit", edit_message_comment_path(message, comment), remote: true , class: "btn btn-outline-primary" %>
+        <%= link_to "delete", message_comment_path(comment.message_id, comment.id), method: :delete, remote: true, data: { confirm: "ok?"}, 
+        class: "btn btn-outline-danger" %>
       </li>
     <% end %>
   <% end %>
