クイズ作成時のジャンル選択の自動追加実装

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -7,18 +7,16 @@
   <%= f.label :month %>
   <%= f.select :month, [["1月",1],["2月",2],["3月",3],["4月",4],["5月",5],["6月",6],["7月",7],
   ["8月",8],["9月",9],["10月",10],["11月",11],["12月",12]] %><br>
-  <%= f.radio_button :genre_id, 1 %>
-  <%= f.label :genre_id, :世界史 %>
-  <%= f.radio_button :genre_id, 2 %>
-  <%= f.label :genre, :日本史 %>
-  <%= f.radio_button :genre_id, 4 %>
-  <%= f.label :genre_id, :IT %>
   <br>
   <%  @genres.each do |genre| %> 
-    <%= "* " + genre.name %><%= genre.id %>
+    <div>
+    <%= f.radio_button :genre_id, genre.id %>
+  　<%= f.label :genre_id, genre.name %>
+    </div>
   <% end %>
   <br><br>
   <%= f.label :memo %><br>
   <%= f.text_area :memo %><br><br>
   <%= f.submit %>
+  <br>
 <% end %>
