Adminの実装(途中まで)

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,17 +2,17 @@
 <p>welcome to this historic quiz site!</p>
 <br>
 <% if user_signed_in? %>
-  <%= link_to "できごと一覧", questions_path, class: 'btn btn-primary'  %>
-  <%= link_to "ジャンル一覧", genres_path, class: 'btn btn-primary'  %>
-  <% if current_user.player == nil %>
-    <%= link_to 'プレイヤー登録', new_player_path, class: 'btn btn-warning' %><br><br>
+  <% if current_user.player.id == nil %>
+    <%= link_to 'Create Player', new_player_path, class: 'btn btn-warning' %><br><br>
   <% else %>
-    <%= link_to 'プレイヤー情報をみる', player_path(current_user.player.id), class: 'btn btn-info' %><br><br>
+    <%= link_to "Questions Index", questions_path, class: 'btn btn-primary'  %>
+    <%= link_to "Genres Index", genres_path, class: 'btn btn-primary'  %>
+    <%= link_to 'Show Player', player_path(current_user.player.id), class: 'btn btn-info' %><br><br>
+    <%= link_to 'Try Quiz!', games_prepare_path, class: 'btn btn-success' %><br><br>
   <% end %>
-  <%= link_to 'クイズに挑戦', games_prepare_path, class: 'btn btn-success' %><br><br>
-  <%= link_to "ログアウト", destroy_user_session_path, method: :delete ,class: 'btn btn-danger' %>
+  <%= link_to "Sign Out", destroy_user_session_path, method: :delete ,class: 'btn btn-danger' %>
 <% else %>
-  <%= link_to "新規登録", new_user_registration_path, class: 'btn btn-primary'  %>
-  <%= link_to "ログイン", new_user_session_path, class: 'btn btn-primary'  %>
+  <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary'  %>
+  <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary'  %>
 <% end %>
 
