--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -10,4 +10,9 @@
   <% end %>
 <br>
   <%= link_to "new message" , new_message_path, class: "btn btn-primary" %>
+  <%= link_to 'Main Page', homes_top_path, class: 'btn btn-primary'  %>
+  <%= link_to 'Players Index', players_path, class: 'btn btn-primary' %>
+  <%= link_to 'Questions Index', questions_path, class: 'btn btn-primary' %>
+  <%= link_to 'Genres Index', genres_path, class: 'btn btn-primary' %>
+  <%= link_to 'Try Quiz!', games_prepare_path, class: 'btn btn-success' %>
 </table>
