--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,4 +1,4 @@
-<h1> New Message </h1>
+<h1>Create Message </h1>
 
 <%= render 'form' %>
 <%= link_to 'Back', messages_path, class: 'btn btn-primary' %>
