--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -3,5 +3,9 @@
   <%= f.text_area :favorite_category %><br><br>
   <%= f.label :comment %><br>
   <%= f.text_area :comment %><br><br>
+    <%= f.radio_button :admin, true %>
+    <%= f.label :admin, "Administrator" %>
+    <%= f.radio_button :admin, false %>
+    <%= f.label :admin, "Normal User" , checked: true %><br><br>
   <%= f.submit %>
 <% end %>
