--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -5,6 +5,7 @@
         <th>Name</th>
         <th>Played Games</th>
         <th>Total Corrects</th>
+        <th>Admin</th>
         <th colspan="3"></th>
       </tr>
   </thead>
@@ -14,6 +15,7 @@
           <th><%= player.user.name %></th>
           <th><%= player.game %></th>
           <th><%= player.correct %></th>
+          <th><%= player.admin %>
           <th><%= link_to 'show', player_path(player), class: 'btn btn-outline-info btn-sm' %></th>
           <th><%= link_to 'Edit', edit_player_path(player), class: 'btn btn-outline-info btn-sm'  %></th>
           <th><%= link_to 'Destroy', player, method: :delete, class: 'btn btn-outline-danger btn-sm'  %></th>
