--- a/app/views/games/prepare.html.erb
+++ b/app/views/games/prepare.html.erb
@@ -1,5 +1,5 @@
 <h1>Games#prepare</h1>
-<p>Find me in app/views/games/prepare.html.erb</p>
+<p>挑戦したいジャンルを選んでね</p>
 <table class="table">
   <tbody>
     <% @genres.each do |genre| %>
